--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,20 +40,57 @@ RUN make
 WORKDIR /Avl/bin
 RUN make
 
+FROM continuumio/anaconda3 as openvsp
+RUN apt-get update
+ENV TZ=Europe/Minsk
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN apt-get install -y wget cmake libxml2-dev g++ libjpeg-dev libglm-dev libeigen3-dev libcminpack-dev libglew-dev swig
+WORKDIR /
+RUN wget -O - https://github.com/OpenVSP/OpenVSP/tarball/OpenVSP_3.24.0 | tar xz
+RUN mkdir -p /OpenVSP-OpenVSP-9b64795/SuperProject/build
+RUN mkdir -p /usr/local/openvsp
+WORKDIR /OpenVSP-OpenVSP-9b64795/SuperProject/build
+RUN cmake .. \
+        -DCMAKE_INSTALL_PREFIX=/usr/local/openvsp \
+        -DVSP_NO_GRAPHICS=true \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_PREFIX_PATH='/usr' \
+        -DVSP_USE_SYSTEM_CPPTEST=false \
+        -DVSP_USE_SYSTEM_LIBXML2=true \
+        -DVSP_USE_SYSTEM_EIGEN=true \
+        -DVSP_USE_SYSTEM_CODEELI=false \
+        -DVSP_USE_SYSTEM_FLTK=false \
+        -DVSP_USE_SYSTEM_GLM=true \
+        -DVSP_USE_SYSTEM_GLEW=true \
+        -DVSP_USE_SYSTEM_CMINPACK=true \
+        -DPYTHON_EXECUTABLE='/opt/conda/bin/python' \
+        -DPYTHON_LIBRARY='/opt/conda/lib' \
+        -DPYTHON_INCLUDE_DIR='/opt/conda/include/python3.8' \
+        -DPYTHON_INCLUDE_PATH='/opt/conda/include'
+RUN make
+
 #
 # base image
 #
 FROM continuumio/anaconda3
 EXPOSE 8888
+
+RUN apt-get update
+RUN apt-get install -y unzip
+
 # copy xfoil binaries
 COPY --from=xfoil /usr/local/bin/xfoil /usr/bin
 COPY --from=xfoil /usr/local/bin/pplot /usr/bin
 COPY --from=xfoil /usr/local/bin/pxplot /usr/bin
 ENV LD_LIBRARY_PATH="/opt/conda/lib:${LD_LIBRARY_PATH}"
 
-# install openscad
-#RUN apt-get update && apt-get install -y \
-#   openscad
+# install openvsp
+RUN mkdir /usr/local/openvsp
+COPY --from=openvsp /usr/local/openvsp /usr/local/openvsp
+COPY --from=openvsp /OpenVSP-OpenVSP-9b64795/SuperProject/build/OpenVSP-prefix/src/OpenVSP-build/OpenVSP-3.24.0-Linux.zip /usr/local/openvsp
+
+WORKDIR /usr/local/openvsp
+RUN unzip OpenVSP-3.24.0-Linux.zip
 
 # install AeroSandbox. ADRpy aerospace libraries
 RUN pip install AeroSandbox ADRpy
@@ -63,4 +100,5 @@ COPY aerodesign.ipynb /
 COPY airfoils /airfoils
 
 # add command
+WORKDIR /
 CMD ["jupyter", "lab", "--ip='0.0.0.0'", "--port=8888", "--no-browser", "--allow-root"]
